--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -225,6 +225,7 @@
   "Contact address": "Contact address",
   "Are you sure you want to delete this contact?": "Are you sure you want to delete this contact?",
   "Secret recovery phrase": "Secret recovery phrase",
+  "Secret recovery phrase backup": "Secret recovery phrase backup",
   "Enter the 24 words of your secret recovery phrase one-by-one.": "Enter the 24 words of your secret recovery phrase one-by-one.",
   "Type your secret phrase": "Type your secret phrase",
   "Show secret recovery phrase": "Show secret recovery phrase",
@@ -390,5 +391,9 @@
   "Added {{ tokenName }}": "Added {{ tokenName }}",
   "Removed {{ tokenName }}": "Removed {{ tokenName }}",
   "Address book": "Address book",
-  "Start by adding funds to your wallet.": "Start by adding funds to your wallet."
+  "Start by adding funds to your wallet.": "Start by adding funds to your wallet.",
+  "I confirm that I have saved my secret recovery phrase securely.": "I confirm that I have saved my secret recovery phrase securely.",
+  "If you lose access to your fund password, the only way to recover your funds is by using your secret recovery phrase.": "If you lose access to your fund password, the only way to recover your funds is by using your secret recovery phrase.",
+  "I'll do it later": "I'll do it later",
+  "Save fund password": "Save fund password"
 }
