--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -506,5 +506,6 @@
   "Signing messages with Ledger is not supported.": "Signing messages with Ledger is not supported.",
   "Plug in and unlock your Ledger device.": "Plug in and unlock your Ledger device.",
   "ledgerInstructionsOpenApp": "Open the Alephium Ledger app. The Alephium app can be installed via <1>Ledger Live</1>.",
-  "Is your device plugged in and the Alephium app open?": "Is your device plugged in and the Alephium app open?"
+  "Is your device plugged in and the Alephium app open?": "Is your device plugged in and the Alephium app open?",
+  "Please, confirm the transaction on your Ledger.": "Please, confirm the transaction on your Ledger."
 }
