--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -395,5 +395,6 @@
   "I confirm that I have saved my secret recovery phrase securely.": "I confirm that I have saved my secret recovery phrase securely.",
   "If you lose access to your fund password, the only way to recover your funds is by using your secret recovery phrase.": "If you lose access to your fund password, the only way to recover your funds is by using your secret recovery phrase.",
   "I'll do it later": "I'll do it later",
-  "Save fund password": "Save fund password"
+  "Save fund password": "Save fund password",
+  "Decrypt": "Decrypt"
 }
