Start implementing private mode

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -521,5 +521,6 @@
   "Scan": "Scan",
   "Active address discovery completed. Addresses added: {{ count }}": "Active address discovery completed. Addresses added: {{ count }}",
   "Purchase done!": "Purchase done!",
-  "Wallet worth": "Wallet worth"
+  "Wallet worth": "Wallet worth",
+  "Private mode": "Private mode"
 }
