Various UI fixes and improvements

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -396,5 +396,6 @@
   "If you lose access to your fund password, the only way to recover your funds is by using your secret recovery phrase.": "If you lose access to your fund password, the only way to recover your funds is by using your secret recovery phrase.",
   "I'll do it later": "I'll do it later",
   "Save fund password": "Save fund password",
-  "Decrypt": "Decrypt"
+  "Decrypt": "Decrypt",
+  "Warning": "Warning"
 }
