Migrate mw WalletConnectSessionProposalModal props
Related to #947
Closes #856

Also see: https://github.com/alephium/alephium-frontend/pull/1026#pullrequestreview-2512003381

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -398,5 +398,6 @@
   "Save fund password": "Save fund password",
   "Decrypt": "Decrypt",
   "Warning": "Warning",
-  "No assets there, yet.": "No assets there, yet."
+  "No assets there, yet.": "No assets there, yet.",
+  "There is something wrong in the received WalletConnect data.": "There is something wrong in the received WalletConnect data."
 }
