Add empty placeholder in addresses screen

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -397,5 +397,6 @@
   "I'll do it later": "I'll do it later",
   "Save fund password": "Save fund password",
   "Decrypt": "Decrypt",
-  "Warning": "Warning"
+  "Warning": "Warning",
+  "No assets there, yet.": "No assets there, yet."
 }
