Adapt logos and colors

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -522,5 +522,5 @@
   "Active address discovery completed. Addresses added: {{ count }}": "Active address discovery completed. Addresses added: {{ count }}",
   "Purchase done!": "Purchase done!",
   "Wallet worth": "Wallet worth",
-  "Private mode": "Private mode"
+  "Private modes": "Private modes"
 }
