--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -417,5 +417,6 @@
   "Set as default": "Set as default",
   "token_in_addresses_one": "in {{ count }} address",
   "token_in_addresses_other": "in {{ count }} addresses",
-  "Transaction sent": "Transaction sent"
+  "Transaction sent": "Transaction sent",
+  "Ecosystem": "Ecosystem"
 }
