Init ecosystem screen, cleanup some header logic

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -410,5 +410,6 @@
   "Approving": "Approving",
   "Rejecting": "Rejecting",
   "Building transaction": "Building transaction",
-  "Connecting": "Connecting"
+  "Connecting": "Connecting",
+  "Ecosystem": "Ecosystem"
 }
