Smol change to Dashboard (wallet worth label and color)

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -400,5 +400,6 @@
   "Warning": "Warning",
   "No assets here, yet.": "No assets here, yet.",
   "There is something wrong in the received WalletConnect data.": "There is something wrong in the received WalletConnect data.",
-  "Loading your balances...": "Loading your balances..."
+  "Loading your balances...": "Loading your balances...",
+  "Wallet worth": "Wallet worth"
 }
