--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -398,6 +398,6 @@
   "Save fund password": "Save fund password",
   "Decrypt": "Decrypt",
   "Warning": "Warning",
-  "No assets there, yet.": "No assets there, yet.",
+  "No assets here, yet.": "No assets here, yet.",
   "There is something wrong in the received WalletConnect data.": "There is something wrong in the received WalletConnect data."
 }
