Improve loading status of dashboard

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -399,5 +399,6 @@
   "Decrypt": "Decrypt",
   "Warning": "Warning",
   "No assets here, yet.": "No assets here, yet.",
-  "There is something wrong in the received WalletConnect data.": "There is something wrong in the received WalletConnect data."
+  "There is something wrong in the received WalletConnect data.": "There is something wrong in the received WalletConnect data.",
+  "Loading your balances...": "Loading your balances..."
 }
