--- a/apps/desktop-wallet/locales/bg-BG/translation.json
+++ b/apps/desktop-wallet/locales/bg-BG/translation.json
@@ -203,7 +203,7 @@
   "Wallets": "Портфейли",
   "Welcome to Alephium.": "Добре дошли в Alephium.",
   "welcomeScreenOneAddressPerGroupMessage": "Напреднал потребител: искате да започнете с <1>един адрес на група за добив или DeFi?</1>",
-  "You have great ideas you want to share?": "Имате страхотни идеи, които искате да споделите?",
+  "Do you have great ideas you want to share?": "Имате страхотни идеи, които искате да споделите?",
   "Your address": "Вашият адрес",
   "Your Wallet": "Вашият портфейл",
   "{{ amount }} words entered": "{{ amount }} думи въведени"
