Clean code, add shade support to animation, init AddressDetailsModal

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -400,5 +400,7 @@
   "No assets here, yet.": "No assets here, yet.",
   "There is something wrong in the received WalletConnect data.": "There is something wrong in the received WalletConnect data.",
   "Loading your balances...": "Loading your balances...",
-  "Wallet worth": "Wallet worth"
+  "Wallet worth": "Wallet worth",
+  "Address worth": "Address worth",
+  "Create addresses to better organize your assets.": "Create addresses to better organize your assets."
 }
