--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -401,6 +401,5 @@
   "There is something wrong in the received WalletConnect data.": "There is something wrong in the received WalletConnect data.",
   "Loading your balances...": "Loading your balances...",
   "Wallet worth": "Wallet worth",
-  "Address worth": "Address worth",
-  "Create addresses to better organize your assets.": "Create addresses to better organize your assets."
+  "Address worth": "Address worth"
 }
