--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -403,5 +403,6 @@
   "Wallet worth": "Wallet worth",
   "Address worth": "Address worth",
   "Address hash": "Address hash",
-  "Forget address": "Forget address"
+  "Forget address": "Forget address",
+  "Address forgotten": "Address forgotten"
 }
