Fix crash due to SpinnerModal
The problem is that we reset the navigation before the spinner modal is
properly closed. It gets fixed by rendering the SpinnerModal outside of
navigatable screens and managing its state through Redux.

Closes #1102

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -400,5 +400,11 @@
   "No assets here, yet.": "No assets here, yet.",
   "There is something wrong in the received WalletConnect data.": "There is something wrong in the received WalletConnect data.",
   "Loading your balances...": "Loading your balances...",
-  "Wallet worth": "Wallet worth"
+  "Wallet worth": "Wallet worth",
+  "Disconnecting": "Disconnecting",
+  "Processing WalletConnect request": "Processing WalletConnect request",
+  "Approving": "Approving",
+  "Rejecting": "Rejecting",
+  "Building transaction": "Building transaction",
+  "Connecting": "Connecting"
 }
