feat: address ordering draft

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -25,6 +25,7 @@
   "All transactions were loaded!": "All transactions were loaded!",
   "All the transactions of this address were loaded!": "All the transactions of this address were loaded!",
   "All the transactions that match the filtering criteria were loaded!": "All the transactions that match the filtering criteria were loaded!",
+  "Alphabetical": "Alphabetical",
   "ALPH price: {{ price }}": "ALPH price: {{ price }}",
   "Alright! Time to check if you got your words right!": "Alright! Time to check if you got your words right!",
   "Amount": "Amount",
