Create token details modal
Closes #245

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -410,5 +410,7 @@
   "Approving": "Approving",
   "Rejecting": "Rejecting",
   "Building transaction": "Building transaction",
-  "Connecting": "Connecting"
+  "Connecting": "Connecting",
+  "Address balance": "Address balance",
+  "Wallet balance": "Wallet balance"
 }
