Play around with blendMode to improve contrast

--- a/apps/mobile-wallet/locales/de-DE/translation.json
+++ b/apps/mobile-wallet/locales/de-DE/translation.json
@@ -278,7 +278,7 @@
   "How should we name this wallet?": "Wie sollen wir diese Wallet nennen?",
   "Wallet name": "Walletname",
   "Creating wallet": "Wallet erstellen",
-  "Welcome to Alephium!": "Willkommen bei Alephium!",
+  "Welcome to Alephium": "Willkommen bei Alephium",
   "Enjoy your new wallet!": "Genießen Sie Ihre neue Wallet!",
   "Choose how you want to import your wallet.": "Wählen Sie aus, wie Sie Ihre Wallet importieren möchten.",
   "Import method": "Importmethode",
