--- a/apps/mobile-wallet/locales/el-GR/translation.json
+++ b/apps/mobile-wallet/locales/el-GR/translation.json
@@ -276,7 +276,7 @@
   "How should we name this wallet?": "Πώς να ονομάσουμε αυτό το πορτοφόλι;",
   "Wallet name": "Όνομα πορτοφολιού",
   "Creating wallet": "Δημιουργία πορτοφολιού",
-  "Welcome to Alephium!": "Καλωσορίσατε στο Alephium!",
+  "Welcome to Alephium": "Καλωσορίσατε στο Alephium",
   "Enjoy your new wallet!": "Απολαύστε το νέο σας πορτοφόλι!",
   "Choose how you want to import your wallet.": "Επιλέξτε πώς θέλετε να εισάγετε το πορτοφόλι σας.",
   "Import method": "Μέθοδος εισαγωγής",
