--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -279,7 +279,7 @@
   "How should we name this wallet?": "How should we name this wallet?",
   "Wallet name": "Wallet name",
   "Creating wallet": "Creating wallet",
-  "Welcome to Alephium!": "Welcome to Alephium!",
+  "Welcome to Alephium": "Welcome to Alephium",
   "Enjoy your new wallet!": "Enjoy your new wallet!",
   "Choose how you want to import your wallet.": "Choose how you want to import your wallet.",
   "Import method": "Import method",
