--- a/apps/mobile-wallet/locales/fr-FR/translation.json
+++ b/apps/mobile-wallet/locales/fr-FR/translation.json
@@ -268,7 +268,7 @@
   "How should we name this wallet?": "Comment devrions-nous appeler ce portefeuille?",
   "Wallet name": "Nom du portefeuille",
   "Creating wallet": "Création du portefeuille",
-  "Welcome to Alephium!": "Bienvenue chez Alephium!",
+  "Welcome to Alephium": "Bienvenue chez Alephium",
   "Enjoy your new wallet!": "Profitez de votre nouveau portefeuille!",
   "Choose how you want to import your wallet.": "Choisissez comment vous souhaitez importer votre portefeuille.",
   "Import method": "Méthode d'importation",
