--- a/apps/mobile-wallet/locales/pt-PT/translation.json
+++ b/apps/mobile-wallet/locales/pt-PT/translation.json
@@ -278,7 +278,7 @@
   "How should we name this wallet?": "Como devemos chamar esta carteira?",
   "Wallet name": "Nome da carteira",
   "Creating wallet": "Criando carteira",
-  "Welcome to Alephium!": "Bem-vindo ao Alephium!",
+  "Welcome to Alephium": "Bem-vindo ao Alephium",
   "Enjoy your new wallet!": "Aproveite a sua nova carteira!",
   "Choose how you want to import your wallet.": "Escolha como você deseja importar sua carteira.",
   "Import method": "Método de importação",
