--- a/apps/mobile-wallet/locales/th-TH/translation.json
+++ b/apps/mobile-wallet/locales/th-TH/translation.json
@@ -239,7 +239,7 @@
   "How should we name this wallet?": "ควรตั้งชื่อกระเป๋าเงินนี้ว่าอย่างไร?",
   "Wallet name": "ชื่อกระเป๋าเงิน",
   "Creating wallet": "กำลังสร้างกระเป๋า",
-  "Welcome to Alephium!": "ยินดีต้อนรับสู่ Alephium",
+  "Welcome to Alephium": "ยินดีต้อนรับสู่ Alephium",
   "Enjoy your new wallet!": "เพลิดเพลินไปกับกระเป๋าเงินใหม่",
   "Choose how you want to import your wallet.": "เลือกวิธีการนำเข้ากระเป๋าเงิน",
   "Import method": "วิธีการนำเข้า",
