Play around with blendMode to improve contrast

--- a/apps/mobile-wallet/locales/vi-VN/translation.json
+++ b/apps/mobile-wallet/locales/vi-VN/translation.json
@@ -279,7 +279,7 @@
   "How should we name this wallet?": "Bạn muốn đặt tên cho ví này là gì?",
   "Wallet name": "Tên ví",
   "Creating wallet": "Đang tạo ví",
-  "Welcome to Alephium!": "Chào mừng bạn đến với Alephium!",
+  "Welcome to Alephium": "Chào mừng bạn đến với Alephium",
   "Enjoy your new wallet!": "Tận hưởng ví mới của bạn!",
   "Choose how you want to import your wallet.": "Chọn cách mà bạn muốn thêm ví.",
   "Import method": "Thêm phương pháp",
