--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -416,5 +416,6 @@
   "The {{ tokenSymbol }} token can be found in these addresses:": "The {{ tokenSymbol }} token can be found in these addresses:",
   "Set as default": "Set as default",
   "token_in_addresses_one": "in {{ count }} address",
-  "token_in_addresses_other": "in {{ count }} addresses"
+  "token_in_addresses_other": "in {{ count }} addresses",
+  "Transaction sent": "Transaction sent"
 }
