chore: added translations

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -27,7 +27,7 @@
   "All the transactions that match the filtering criteria were loaded!": "All the transactions that match the filtering criteria were loaded!",
   "Alphabetical": "Alphabetical",
   "ALPH price: {{ price }}": "ALPH price: {{ price }}",
-  "ALPH value:": "ALPH value",
+  "ALPH value": "ALPH value",
   "Alright! Time to check if you got your words right!": "Alright! Time to check if you got your words right!",
   "Amount": "Amount",
   "Amount exceeds available balance": "Amount exceeds available balance",
