--- a/apps/desktop-wallet/locales/de-DE/translation.json
+++ b/apps/desktop-wallet/locales/de-DE/translation.json
@@ -26,6 +26,7 @@
   "All the transactions of this address were loaded!": "Alle Transaktionen von dieser Adresse wurden geladen!",
   "All the transactions that match the filtering criteria were loaded!": "Alle Transaktionen, die den Filterkriterien entsprechen, wurden geladen!",
   "ALPH price: {{ price }}": "ALPH Preis: {{ price }}",
+  "ALPH value": "ALPH Wert",
   "Alright! Time to check if you got your words right!": "Alles klar! Prüfen Sie, ob Sie die Wörter richtig aufgeschrieben haben!",
   "Amount": "Betrag",
   "Amount exceeds available balance": "Betrag übersteigt verfügbares Guthaben",
