Add coming soon

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -420,5 +420,6 @@
   "Transaction sent": "Transaction sent",
   "Ecosystem": "Ecosystem",
   "Loading dApps...": "Loading dApps...",
-  "Could not load dApps": "Could not load dApps"
+  "Could not load dApps": "Could not load dApps",
+  "Coming soon!": "Coming soon!"
 }
