Tweak worth overview, try to match better mobile UI (wip)

--- a/apps/desktop-wallet/locales/en-US/translation.json
+++ b/apps/desktop-wallet/locales/en-US/translation.json
@@ -521,6 +521,7 @@
   "Active address discovery completed. Addresses added: {{ count }}": "Active address discovery completed. Addresses added: {{ count }}",
   "Purchase done!": "Purchase done!",
   "Wallet worth": "Wallet worth",
+  "Address worth": "Address worth",
   "Loading new transactions...": "Loading new transactions...",
   "Sign and Send Unsigned Transaction": "Sign and Send Unsigned Transaction",
   "Sign and Send": "Sign and Send"
