Display favorites tag and message

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -424,5 +424,6 @@
   "Coming soon!": "Coming soon!",
   "Added to favorites": "Added to favorites",
   "Removed from favorites": "Removed from favorites",
-  "Favorites": "Favorites"
+  "Favorites": "Favorites",
+  "No dApps added to your favorites yet": "No dApps added to your favorites yet"
 }
