--- a/apps/mobile-wallet/locales/th-TH/translation.json
+++ b/apps/mobile-wallet/locales/th-TH/translation.json
@@ -369,7 +369,7 @@
   "View full size": "ขนาดเต็มจอ",
   "Disclaimer": "การปฏิเสธความรับผิดชอบ",
   "Buy": "ซื้อ",
-  "banxaDisclaimer": "คุณกำลังเข้าถึงบริการของบุคคลที่ให้บริการโดย <1>Banxa.com</1> ผ่านเบราว์เซอร์ภายในแอป Alephium ไม่ได้ควบคุมบริการของ Banxa ข้อกำหนดและเงื่อนไขของ Banxa จะมีผลบังคับใช้ โปรดอ่านและทำความเข้าใจก่อนดำเนินการต่อ",
+  "banxaDisclaimer": "คุณกำลังเข้าถึงบริการของบุคคลที่ให้บริการโดย <1>Onramper.com</1> ผ่านเบราว์เซอร์ภายในแอป Alephium ไม่ได้ควบคุมบริการของ Onramper ข้อกำหนดและเงื่อนไขของ Onramper จะมีผลบังคับใช้ โปรดอ่านและทำความเข้าใจก่อนดำเนินการต่อ",
   "App data were reset": "ข้อมูลแอปได้รับการรีเซ็ตแล้ว",
   "Restore data": "กู้คืนข้อมูล",
   "Due to an unexpected error some of your app's data are missing. Would you like to regenerate them? Your funds are safe.": "เนื่องจากเกิดข้อผิดพลาดที่ไม่คาดคิด ข้อมูลบางส่วนของแอปจึงสูญหาย ต้องการสร้างข้อมูลใหม่หรือไม่ เงินของคุณปลอดภัย",
