--- a/apps/mobile-wallet/locales/vi-VN/translation.json
+++ b/apps/mobile-wallet/locales/vi-VN/translation.json
@@ -369,7 +369,7 @@
   "View full size": "Xem kích thước đầy đủ",
   "Disclaimer": "Lưu ý quan trọng",
   "Buy": "Mua",
-  "banxaDisclaimer": "Bạn sẽ truy cập các dịch vụ của bên thứ ba do <1>Banxa.com</1> cung cấp thông qua trình duyệt trong ứng dụng. Alephium không kiểm soát các dịch vụ của Banxa. Các điều khoản và điều kiện của Banxa sẽ được áp dụng, vui lòng đọc kỹ và hiểu về họ trước khi tiếp tục.",
+  "banxaDisclaimer": "Bạn sẽ truy cập các dịch vụ của bên thứ ba do <1>Onramper.com</1> cung cấp thông qua trình duyệt trong ứng dụng. Alephium không kiểm soát các dịch vụ của Onramper. Các điều khoản và điều kiện của Onramper sẽ được áp dụng, vui lòng đọc kỹ và hiểu về họ trước khi tiếp tục.",
   "App data were reset": "Đã đặt lại dữ liệu ứng dụng",
   "Restore data": "Khôi phục dữ liệu",
   "Due to an unexpected error some of your app's data are missing. Would you like to regenerate them? Your funds are safe.": "Đã có lỗi xảy ra khiến một vài dữ liệu ứng dụng đang bị thiếu. Bạn có muốn tạo lại chúng không? Các tài sản của bạn đều an toàn.",
