--- a/apps/mobile-wallet/locales/zh-CN/translation.json
+++ b/apps/mobile-wallet/locales/zh-CN/translation.json
@@ -364,7 +364,7 @@
   "View full size": "查看完整大小",
   "Disclaimer": "免责声明",
   "Buy": "购买",
-  "banxaDisclaimer": "您即将通过应用内浏览器访问<1>Banxa.com</1>提供的第三方服务。 Alephium不控制Banxa的服务。Banxa的条款和条件将会被应用，请在继续之前阅读和理解它们。",
+  "banxaDisclaimer": "您即将通过应用内浏览器访问<1>Onramper.com</1>提供的第三方服务。 Alephium不控制Onramper的服务。Onramper的条款和条件将会被应用，请在继续之前阅读和理解它们。",
   "App data were reset": "应用数据已重置",
   "Restore data": "恢复数据",
   "Due to an unexpected error some of your app's data are missing. Would you like to regenerate them? Your funds are safe.": "由于意外的错误，您的应用的某些数据丢失了。您想要重新生成它们吗？您的资金是安全的。",
