--- a/apps/mobile-wallet/locales/pt-PT/translation.json
+++ b/apps/mobile-wallet/locales/pt-PT/translation.json
@@ -364,7 +364,7 @@
   "View full size": "Ver tamanho completo",
   "Disclaimer": "Aviso legal",
   "Buy": "Comprar",
-  "banxaDisclaimer": "Você está prestes a acessar serviços de terceiros fornecidos por <1>Banxa.com</1> através de um navegador in-app. Alephium não controla os serviços da Banxa. Os termos e condições da Banxa serão aplicados, então, por favor, leia-os e entenda-os antes de prosseguir.",
+  "banxaDisclaimer": "Você está prestes a acessar serviços de terceiros fornecidos por <1>Onramper.com</1> através de um navegador in-app. Alephium não controla os serviços da Onramper. Os termos e condições da Onramper serão aplicados, então, por favor, leia-os e entenda-os antes de prosseguir.",
   "App data were reset": "Dados do app foram redefinidos",
   "Restore data": "Restaurar dados",
   "Due to an unexpected error some of your app's data are missing. Would you like to regenerate them? Your funds are safe.": "Devido a um erro inesperado, alguns dos dados do seu aplicativo estão faltando. Gostaria de regenerá-los? Seus fundos estão seguros.",
