Implement nit feedback

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -429,7 +429,7 @@
   "Hide assets you're not interested in": "Hide assets you're not interested in",
   "Hidden assets": "Hidden assets",
   "Here is the list of assets you are hiding": "Here is the list of assets you are hiding",
-  "Add an asset to hide": "Add an asset to hide",
+  "Hide an asset": "Hide an asset",
   "No assets are hidden": "No assets are hidden",
   "Asset to hide": "Asset to hide",
   "Asset hidden": "Asset hidden",
