Add "hidden assets" section in SettingsScreen

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -425,5 +425,6 @@
   "Added to favorites": "Added to favorites",
   "Removed from favorites": "Removed from favorites",
   "Favorites": "Favorites",
-  "No dApps added to your favorites yet": "No dApps added to your favorites yet"
+  "No dApps added to your favorites yet": "No dApps added to your favorites yet",
+  "Hide assets your are not interested in": "Hide assets your are not interested in"
 }
